--- a/ze/ze_validator.in
+++ b/ze/ze_validator.in
@@ -7,6 +7,7 @@ require 'find'
 require 'ze_library'
 require 'pp'
 require 'set'
+require 'yaml'
 
 # Don't complain about broken pipe
 Signal.trap('SIGPIPE', 'SYSTEM_DEFAULT')
@@ -66,12 +67,32 @@ module ZEModel
 class Object
   attr_reader :handle
 
+  def self.typename
+    @typename
+  end
+
   def initialize(handle)
     @handle = handle
+    @lock = nil
+  end
+
+  def lock(ctx)
+    if @lock
+      print_race_condition(ctx, @lock, self.class.typename, @handle)
+    else
+      @lock = ctx
+    end
+  end
+
+  def unlock(ctx)
+    if @lock == ctx
+      @lock = nil
+    end
   end
 end
 
 class Driver < Object
+  @typename = 'driver'
   attr_reader :devices
 
   def initialize(handle)
@@ -81,6 +102,7 @@ class Driver < Object
 end
 
 class Device < Object
+  @typename = 'device'
   attr_reader :properties
   attr_reader :sub_devices
 
@@ -100,6 +122,7 @@ class SubDevice < Device
 end
 
 class Context < Object
+  @typename = 'context'
   attr_reader :driver
   attr_reader :desc
   attr_reader :devices
@@ -125,6 +148,7 @@ class Context < Object
 end
 
 class EventPool < Object
+  @typename = 'event_pool'
   attr_reader :context
   attr_reader :desc
   attr_reader :devices
@@ -142,6 +166,7 @@ class EventPool < Object
 end
 
 class Event < Object
+  @typename = 'event'
   attr_reader :event_pool
   attr_reader :desc
 
@@ -153,6 +178,7 @@ class Event < Object
 end
 
 class CommandQueue < Object
+  @typename = 'command_queue'
   attr_reader :context
   attr_reader :device
   attr_reader :desc
@@ -168,6 +194,7 @@ class CommandQueue < Object
 end
 
 class Fence < Object
+  @typename = 'fence'
   attr_reader :command_queue
   attr_reader :desc
 
@@ -179,6 +206,7 @@ class Fence < Object
 end
 
 class CommandList < Object
+  @typename = 'command_list'
   attr_reader :context
   attr_reader :device
   attr_reader :desc
@@ -198,7 +226,10 @@ class CommandList < Object
 end
 
 class Module < Object
+  @typename = 'module'
+
   class BuildLog < Object
+    @typename = 'module_build_log'
     attr_reader :module
 
     def initialize(handle, mod = nil)
@@ -223,6 +254,7 @@ class Module < Object
 end
 
 class Kernel < Object
+  @typename = 'kernel'
   attr_reader :module
   attr_reader :desc
 
@@ -349,8 +381,12 @@ def get_proc_context_str(context)
   "#{context['hostname']} - #{context['vpid']}"
 end
 
+def get_api_context(context)
+ "#{context['vtid']} in #{context['api']}"
+end
+
 def get_context_str(context)
-  "#{get_proc_context_str(context)} - #{context['vtid']} in #{context['api']}"
+  "#{get_proc_context_str(context)} - #{get_api_context(context)}"
 end
 
 def print_usage_error(context, str)
@@ -367,6 +403,10 @@ end
 
 def raise_internal_error(context, str)
   raise "Invalid state #{get_context_str(context)}: #{str}"
+end
+
+def print_race_condition(context, other_context, type, handle)
+  print_usage_error(context, "concurent acces to #{type} #{get_handle_str(handle)}, already held by #{get_api_context(other_context)}")
 end
 
 def object_not_found(context, type, handle, sub_context = nil)
@@ -390,16 +430,19 @@ def to_struct(memory, klass)
   memory.size > 0 ? klass.new(FFI::MemoryPointer.from_string(memory)) : nil
 end
 
-$exit_lambdas = {}
+$entry_lambdas = Hash.new { |h, k| h[k] = [] }
+$exit_lambdas = Hash.new { |h, k| h[k] = [] }
 
-$exit_lambdas['zeDriverGet'] = lambda { |ctx, defi|
+$clean_exit_lambdas = {}
+
+$clean_exit_lambdas['zeDriverGet'] = lambda { |ctx, defi|
   drivers = get_process(ctx).drivers
   defi['phDrivers_vals'].each { |h|
     drivers[h] = ZEModel::Driver.new(h) unless drivers[h]
   }
 }
 
-$exit_lambdas['zeDeviceGet'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeDeviceGet'] = lambda { |ctx, defi|
   devices = find_objects(ctx, 'device')
   driver = find_object(ctx, 'driver', 'hDriver')
   defi['phDevices_vals'].each { |h|
@@ -410,7 +453,7 @@ $exit_lambdas['zeDeviceGet'] = lambda { |ctx, defi|
   }
 }
 
-$exit_lambdas['zeDeviceGetSubDevices'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeDeviceGetSubDevices'] = lambda { |ctx, defi|
   devices = find_objects(ctx, 'device')
   device = find_object(ctx, 'device', 'hDevice')
   defi['phSubdevices_vals'].each { |h|
@@ -421,7 +464,7 @@ $exit_lambdas['zeDeviceGetSubDevices'] = lambda { |ctx, defi|
   }
 }
 
-$exit_lambdas['zeContextCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeContextCreate'] = lambda { |ctx, defi|
   contexts = find_objects(ctx, 'context')
   driver = find_object(ctx, 'driver', 'hDriver')
   desc_val = find_param(ctx, 'desc_val')
@@ -430,7 +473,7 @@ $exit_lambdas['zeContextCreate'] = lambda { |ctx, defi|
   contexts[handle] = ZEModel::Context.new(handle, driver, desc)
 }
 
-$exit_lambdas['zeContextCreateEx'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeContextCreateEx'] = lambda { |ctx, defi|
   contexts = find_objects(ctx, 'context')
   devices = find_objects(ctx, 'device')
   driver = find_object(ctx, 'driver', 'hDriver')
@@ -442,14 +485,14 @@ $exit_lambdas['zeContextCreateEx'] = lambda { |ctx, defi|
   contexts[handle] = ZEModel::Context.new(handle, driver, desc, devs)
 }
 
-$exit_lambdas['zeContextDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeContextDestroy'] = lambda { |ctx, defi|
   contexts = find_objects(ctx, 'context')
   contexts.delete(find_param(ctx, 'hContext')) { |h|
     raise_internal_error(ctx, "context #{get_handle_str(h)} does not exist")
   }
 }
 
-$exit_lambdas['zeEventPoolCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeEventPoolCreate'] = lambda { |ctx, defi|
   context = find_object(ctx, 'context', 'hContext')
   devices = find_objects(ctx, 'device')
   event_pools = find_objects(ctx, 'event_pool')
@@ -462,7 +505,7 @@ $exit_lambdas['zeEventPoolCreate'] = lambda { |ctx, defi|
   context.event_pools[handle] = event_pools[handle]
 }
 
-$exit_lambdas['zeEventPoolDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeEventPoolDestroy'] = lambda { |ctx, defi|
   event_pools = find_objects(ctx, 'event_pool')
   handle = find_param(ctx, 'hEventPool')
   event_pool = event_pools.delete(handle) {
@@ -476,7 +519,7 @@ $exit_lambdas['zeEventPoolDestroy'] = lambda { |ctx, defi|
   }
 }
 
-$exit_lambdas['zeEventCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeEventCreate'] = lambda { |ctx, defi|
   events = find_objects(ctx, 'event')
   event_pool = find_object(ctx, 'event_pool', 'hEventPool')
   desc_val = find_param(ctx, 'desc_val')
@@ -489,7 +532,7 @@ $exit_lambdas['zeEventCreate'] = lambda { |ctx, defi|
   event_pool.events[handle] = events[handle]
 }
 
-$exit_lambdas['zeEventDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeEventDestroy'] = lambda { |ctx, defi|
   events = find_objects(ctx, 'event')
   handle = find_param(ctx, 'hEvent')
   event = events.delete(handle) {
@@ -504,7 +547,7 @@ $exit_lambdas['zeEventDestroy'] = lambda { |ctx, defi|
   end
 }
 
-$exit_lambdas['zeCommandQueueCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeCommandQueueCreate'] = lambda { |ctx, defi|
   command_queues = find_objects(ctx, 'command_queue')
   context = find_object(ctx, 'context', 'hContext')
   device = find_object(ctx, 'device', 'hDevice')
@@ -515,7 +558,7 @@ $exit_lambdas['zeCommandQueueCreate'] = lambda { |ctx, defi|
   context.command_queues[handle] = command_queues[handle]
 }
 
-$exit_lambdas['zeCommandQueueDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeCommandQueueDestroy'] = lambda { |ctx, defi|
   command_queues = find_objects(ctx, 'command_queue')
   handle = find_param(ctx, 'hCommandQueue')
   command_queue = command_queues.delete(handle) {
@@ -529,7 +572,7 @@ $exit_lambdas['zeCommandQueueDestroy'] = lambda { |ctx, defi|
   }
 }
 
-$exit_lambdas['zeFenceCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeFenceCreate'] = lambda { |ctx, defi|
   fences = find_objects(ctx, 'fence')
   command_queue = find_object(ctx, 'command_queue', 'hCommandQueue')
   desc_val = find_param(ctx, 'desc_val')
@@ -540,7 +583,7 @@ $exit_lambdas['zeFenceCreate'] = lambda { |ctx, defi|
   command_queue.fences[handle] = fence
 }
 
-$exit_lambdas['zeFenceDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeFenceDestroy'] = lambda { |ctx, defi|
   fences = find_objects(ctx, 'fence')
   handle = find_param(ctx, 'hFence')
   fence = fences.delete(handle) {
@@ -552,7 +595,7 @@ $exit_lambdas['zeFenceDestroy'] = lambda { |ctx, defi|
   }
 }
 
-$exit_lambdas['zeCommandListCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeCommandListCreate'] = lambda { |ctx, defi|
   command_lists = find_objects(ctx, 'command_list')
   context = find_object(ctx, 'context', 'hContext')
   device = find_object(ctx, 'device', 'hDevice')
@@ -563,7 +606,7 @@ $exit_lambdas['zeCommandListCreate'] = lambda { |ctx, defi|
   context.command_lists[handle] = command_lists[handle]
 }
 
-$exit_lambdas['zeCommandListCreateImmediate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeCommandListCreateImmediate'] = lambda { |ctx, defi|
   command_lists = find_objects(ctx, 'command_list')
   context = find_object(ctx, 'context', 'hContext')
   device = find_object(ctx, 'device', 'hDevice')
@@ -574,7 +617,7 @@ $exit_lambdas['zeCommandListCreateImmediate'] = lambda { |ctx, defi|
   context.command_lists[handle] = command_lists[handle]
 }
 
-$exit_lambdas['zeCommandListDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeCommandListDestroy'] = lambda { |ctx, defi|
   command_lists = find_objects(ctx, 'command_list')
   handle = find_param(ctx, 'hCommandList')
   command_list = command_lists.delete(handle) {
@@ -585,7 +628,7 @@ $exit_lambdas['zeCommandListDestroy'] = lambda { |ctx, defi|
   }
 }
 
-$exit_lambdas['zeModuleCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeModuleCreate'] = lambda { |ctx, defi|
   modules = find_objects(ctx, 'module')
   context = find_object(ctx, 'context', 'hContext')
   device = find_object(ctx, 'device', 'hDevice')
@@ -605,7 +648,7 @@ $exit_lambdas['zeModuleCreate'] = lambda { |ctx, defi|
   end
 }
 
-$exit_lambdas['zeModuleDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeModuleDestroy'] = lambda { |ctx, defi|
   modules = find_objects(ctx, 'module')
   handle = find_param(ctx, 'hModule')
   mod = modules.delete(handle) {
@@ -619,7 +662,7 @@ $exit_lambdas['zeModuleDestroy'] = lambda { |ctx, defi|
   }
 }
 
-$exit_lambdas['zeModuleDynamicLink'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeModuleDynamicLink'] = lambda { |ctx, defi|
   build_log_handle = defi['phLinkLog_val']
   if build_log_handle != 0
     module_build_logs = find_objects(ctx, 'module_build_log')
@@ -629,7 +672,7 @@ $exit_lambdas['zeModuleDynamicLink'] = lambda { |ctx, defi|
   end
 }
 
-$exit_lambdas['zeModuleBuildLogDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeModuleBuildLogDestroy'] = lambda { |ctx, defi|
   module_build_logs = find_objects(ctx, 'module_build_log')
   handle = find_param(ctx, 'hModuleBuildLog')
   module_build_log = module_build_logs.delete(handle) {
@@ -643,7 +686,7 @@ $exit_lambdas['zeModuleBuildLogDestroy'] = lambda { |ctx, defi|
   end
 }
 
-$exit_lambdas['zeKernelCreate'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeKernelCreate'] = lambda { |ctx, defi|
   kernels = find_objects(ctx, 'kernel')
   mod = find_object(ctx, 'module', 'hModule')
   desc_val = find_param(ctx, 'desc_val')
@@ -654,7 +697,7 @@ $exit_lambdas['zeKernelCreate'] = lambda { |ctx, defi|
   mod.kernels[handle] = kernel
 }
 
-$exit_lambdas['zeKernelDestroy'] = lambda { |ctx, defi|
+$clean_exit_lambdas['zeKernelDestroy'] = lambda { |ctx, defi|
   kernels = find_objects(ctx, 'kernel')
   handle = find_param(ctx, 'hKernel')
   kernel = kernels.delete(handle) {
@@ -663,6 +706,33 @@ $exit_lambdas['zeKernelDestroy'] = lambda { |ctx, defi|
   mod = kernel.module
   mod.kernels.delete(handle) {
     object_not_found(ctx, 'kernel', handle, 'module')
+  }
+}
+
+ze_thread_safety = YAML::load_file(File.join(DATADIR, 'ze_thread_safety.yaml'))
+
+ze_thread_safety.each { |api, objects|
+  objects.each { |o|
+    $entry_lambdas[api].push( lambda { |ctx, defi|
+      handle = defi[o.first]
+      if handle.kind_of? Array
+        handle.each { |h|
+          find_object(ctx, o.last, h).lock(ctx)
+        }
+      else
+        find_object(ctx, o.last, handle).lock(ctx)
+      end
+    })
+    $exit_lambdas[api].push( lambda { |ctx, defi|
+      handle = find_param(ctx, o.first)
+      if handle.kind_of? Array
+        handle.each { |h|
+          find_object(ctx, o.last, h).unlock(ctx)
+        }
+      else
+        find_object(ctx, o.last, handle).unlock(ctx)
+      end
+    })
   }
 }
 
@@ -678,12 +748,19 @@ consume = lambda { |iterator, _|
       context['hostname'] = hostname
       context['api'] = m[1]
 
-      set_last_entry(context, defi) if m[2] == 'entry'
-      if_validated(defi) {
-        l = $exit_lambdas[m[1]]
-        l.call(context, e.payload_field.value) if l
-      }
-      if m[2] == 'exit'
+      if  m[2] == 'entry'
+        set_last_entry(context, defi)
+        $entry_lambdas[m[1]].each { |l|
+          l.call(context, defi)
+        }
+      else
+        $exit_lambdas[m[1]].reverse_each { |l|
+          l.call(context, defi)
+        }
+        if_validated(defi) {
+          l = $clean_exit_lambdas[m[1]]
+          l.call(context, defi) if l
+        }
         check_last_entry(context)
         reset_last_entry(context)
       end
